...
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycleview_notification"
        android:layout_below="@+id/bar_notification">
    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
