<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FDEDE3"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegistrationActivity">


 <ImageView
     android:id="@+id/register_banner"
     android:layout_width="wrap_content"
     android:layout_marginTop="20dp"
     android:layout_height="121dp"
     android:cropToPadding="false"
     app:srcCompat="@drawable/registration_letter" />

 <EditText
     android:id="@+id/username_registration"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/colorPrimaryDark"
     android:layout_marginStart="19dp"
     android:layout_marginEnd="19dp"
     android:layout_marginBottom="20dp"
     android:layout_marginTop="30dp"
     android:background="@drawable/edittext_background"
     android:layout_below="@id/register_banner"
     android:hint="Username"
     android:padding="10dp" />

 <EditText
     android:id="@+id/fullname_registration"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/colorPrimaryDark"
     android:layout_marginStart="19dp"
     android:layout_marginEnd="19dp"
     android:layout_marginBottom="20dp"
     android:background="@drawable/edittext_background"
     android:layout_below="@id/username_registration"
     android:hint="Full Name"
     android:padding="10dp" />

 <EditText
     android:id="@+id/email_registration"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/colorPrimaryDark"
     android:layout_marginStart="19dp"
     android:layout_marginEnd="19dp"
     android:layout_marginBottom="20dp"
     android:background="@drawable/edittext_background"
     android:hint="E-mail"
     android:layout_below="@id/fullname_registration"
     android:inputType="textEmailAddress"
     android:padding="10dp" />

 <EditText
     android:id="@+id/password_registration"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/colorPrimaryDark"
     android:layout_marginStart="19dp"
     android:layout_marginEnd="19dp"
     android:layout_marginBottom="20dp"
     android:background="@drawable/edittext_background"
     android:layout_below="@id/email_registration"
     android:hint="Password"
     android:inputType="textPassword"
     android:padding="10dp" />


 <EditText
     android:id="@+id/password_registration2"
     android:textColor="@color/colorPrimaryDark"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="19dp"
     android:layout_marginEnd="19dp"
     android:layout_marginBottom="20dp"
     android:background="@drawable/edittext_background"
     android:layout_below="@id/password_registration"
     android:hint="Password Again"
     android:inputType="textPassword"
     android:padding="10dp" />

 <Button
     android:id="@+id/btn_register_page"
     android:layout_width="wrap_content"
     android:layout_height="50dp"
     android:layout_centerHorizontal="true"
     android:layout_marginBottom="40dp"
     android:layout_marginTop="20dp"
     android:layout_below="@id/password_registration2"
     android:background="@drawable/button_shape"
     android:text="Regıster"
     android:textSize="18sp"
     android:textColor="#4E260E" />

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/btn_register_page"
     android:layout_centerHorizontal="true">
  <TextView
      android:id="@+id/have_an_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="45dp"
      android:text="@string/do_you_have_an_account"
      android:textColor="#4E260E"
      android:textSize="17sp"
      />

  <TextView
      android:id="@+id/login_text_direct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAlignment="textEnd"
      android:layout_alignParentRight="true"
      android:layout_marginRight="45dp"
      android:textStyle="bold"
      android:layout_toEndOf="@+id/have_an_account"
      android:text="@string/login_from_registration"
      android:textColor="#F99F63"
      android:textSize="17sp"
      />
 </RelativeLayout>




</RelativeLayout>