<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDEDE3"
        android:id="@+id/relativeParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativeTop">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#F99F63"></androidx.appcompat.widget.AppCompatImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/search_mark_desc"
                    app:srcCompat="@drawable/ic_search" />

                <EditText
                    android:id="@+id/search_txt"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginTop="45dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/users_node"
                    android:layout_weight="0.6"
                    android:textSize="18sp"
                    android:textColor="#4E260E"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/usersBtn"
                    android:onClick="performUser"
                    android:clickable="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hashtags"
                    android:textAlignment="center"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:textColor="#4E260E"
                    android:layout_gravity="center"
                    android:id="@+id/hashtagsBtn"
                    android:onClick="performHash"
                    android:clickable="true"
                    />

            </LinearLayout>

            <ListView
                android:id="@+id/search_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="75dp"
                android:layout_marginBottom="50dp"
                android:background="#FDEDE3"></ListView>

        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>

    <include layout="@layout/bottom_navigation_bar"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>