...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="#FDEDE3">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/search_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="22dp"
...
